@@ -36,6 +36,7 @@ depth: 1
  * Ensure there is a visual difference of 'active/current link' vs normal links in Windows high-contrast mode (Mohammad Areeb)
  * Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
  * Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
+ * Remove the ability to view or add comments to `InlinePanel` inner fields to avoid lost or incorrectly linked comments (Jacob Topp-Mugglestone)
 
 ### Documentation
 
@@ -68,3 +69,11 @@ depth: 1
 The `AbstractImage` and `AbstractRendition` models use a Wagtail-specific `WagtailImageField` which extends Django's `ImageField` 
 to use [Willow](https://github.com/wagtail/Willow/) for image file handling. This will generate a new migration if you 
 are using a [custom image model](custom_image_model)
+
+### Comments within `InlinePanel` not supported
+
+When the commenting system was introduced, support for `InlinePanel` fields was incorrectly added. This has lead to issues
+where comments can be lost on save or in most cases will be added to the incorrect item within the `InlinePanel`. The ability
+to add comments here has now been removed and as such any existing comments that were added will no longer show.
+
+See https://github.com/wagtail/wagtail/issues/9685 for tracking of adding this back officially in the future.
